--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
+# 로컬 개발용 설정
 MYSQL_ROOT_PASSWORD=rootpassword
 MYSQL_DATABASE=pharmacy_db
 MYSQL_USER=root
 MYSQL_PASSWORD=1111
-SPRING_PROFILES_ACTIVE=dev
-DB_HOST=<RDS-ENDPOINT>
+SPRING_PROFILES_ACTIVE=local
+# Docker Compose 사용 시 필요없음 (docker-compose에서 설정)
