--- a/infra/.env.prod
+++ b/infra/.env.prod
@@ -1,7 +1,8 @@
-RDS_ENDPOINT=your-rds.xxxxx.ap-northeast-2.rds.amazonaws.com
+# 실제 값으로 변경 필요
+RDS_ENDPOINT=실제-RDS-엔드포인트.ap-northeast-2.rds.amazonaws.com
 SPRING_DATASOURCE_USERNAME=admin
-SPRING_DATASOURCE_PASSWORD=1111
-ALLOWED_ORIGINS=http://3.39.110.46
+SPRING_DATASOURCE_PASSWORD=실제비밀번호
+ALLOWED_ORIGINS=http://실제EC2퍼블릭IP
 DOCKERHUB_USERNAME=uizzuu
-BACKEND_IMAGE=uizzuu/myapp-backend:latest
-FRONTEND_IMAGE=uizzuu/myapp-frontend:latest
+BACKEND_IMAGE=uizzuu/pharmacy-backend:latest
+FRONTEND_IMAGE=uizzuu/pharmacy-frontend:latest
