--- a/infra/docker-compose.local.yml
+++ b/infra/docker-compose.local.yml
@@ -7,7 +7,7 @@ services:
       - .env.local.db
     environment:
       # MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_DATABASE: myapp
+      MYSQL_DATABASE: pharmacy_db
     ports:
       - "3307:3306"   # 호스트 3307 → 컨테이너 3306
     volumes:
