--- a/infra/.env.prod
+++ b/infra/.env.prod
@@ -1,8 +1,12 @@
-# 실제 값으로 변경 필요
-RDS_ENDPOINT=실제-RDS-엔드포인트.ap-northeast-2.rds.amazonaws.com
+# RDS 설정
+RDS_ENDPOINT=your-rds-endpoint.ap-northeast-2.rds.amazonaws.com
 SPRING_DATASOURCE_USERNAME=admin
-SPRING_DATASOURCE_PASSWORD=실제비밀번호
-ALLOWED_ORIGINS=http://실제EC2퍼블릭IP
+SPRING_DATASOURCE_PASSWORD=12345678
+
+# CORS 설정
+ALLOWED_ORIGINS=http://3.39.110.46
+
+# Docker Hub 이미지
 DOCKERHUB_USERNAME=uizzuu
 BACKEND_IMAGE=uizzuu/pharmacy-backend:latest
 FRONTEND_IMAGE=uizzuu/pharmacy-frontend:latest
