--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,51 +1,60 @@
-version: '3.9'
-services:
-  db:
-    image: mysql:8.0
-    container_name: db
-    env_file:
-      - .env.local.db
-    environment:
-      MYSQL_DATABASE: pharmacy_db
-    ports:
-      - "3307:3306"   # 호스트 3307 → 컨테이너 3306
-    volumes:
-      - dbdata:/var/lib/mysql
-    healthcheck:
-      # MySQL 클라이언트 유틸리티인 mysqladmin 을 이용해서 
-      # DB가 살아있는지 확인.
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
-      interval: 5s
-      # test 명령을 실행했을 때 5초 안에 응답이 없으면 실패로 간주
-      timeout: 5s
-      retries: 10
+server:
+  port: 8080
 
-  backend:
-    # ../backend 경로에 있는 Dockerfile로 이미지 빌드
-    build: ../backend
-    container_name: backend
-    env_file:
-      - .env.local.back
-    environment:
-      SPRING_PROFILES_ACTIVE: local
-      # 컨테이너 간 접속 → DB 호스트는 localhost가 아니라 'db'
-      SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/pharmacy_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=utf8
-      SPRING_DATASOURCE_USERNAME: root
-    ports:
-      - "8080:8080"
-    depends_on:
-      db:
-        condition: service_healthy
+spring:
+  profiles:
+    active: local
+    group:
+      local:
+        - common
+      prod:
+        - common
 
-  frontend:
-    build: ../frontend
-    container_name: frontend
-    environment: { }
-    ports:
-      # 로컬 PC에서는 http://localhost:3000, 내부 컨테이너는 80번 포트
-      - "80:80"  # Nginx로 서빙(개발 시 Vite dev 서버를 쓰고 싶으면 로컬 npm run dev 권장)
-    depends_on:
-      - backend
+---
+spring:
+  config:
+    activate:
+      on-profile: common
 
-volumes:
-  dbdata:
+---
+spring:
+  config:
+    activate:
+      on-profile: local
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/pharmacy_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: root
+    password: 1111
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+
+app:
+  allowed-origins: http://localhost:3000
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://${RDS_ENDPOINT}:3306/pharmacy_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        show_sql: false
+
+app:
+  allowed-origins: ${ALLOWED_ORIGINS:http://localhost:3000}
