--- a/infra/.env.prod
+++ b/infra/.env.prod
@@ -1,5 +1,5 @@
 # RDS 설정
-RDS_ENDPOINT=your-rds-endpoint.ap-northeast-2.rds.amazonaws.com
+RDS_ENDPOINT=pharmacy-db.cdycgq4uyj1v.ap-northeast-2.rds.amazonaws.com
 SPRING_DATASOURCE_USERNAME=admin
 SPRING_DATASOURCE_PASSWORD=12345678
 
