--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -3,6 +3,7 @@ services:
   backend:
     image: ${BACKEND_IMAGE}
     container_name: backend
+    pull_policy: always 
     env_file:
       - .env.prod
     environment:
@@ -15,6 +16,7 @@ services:
   frontend:
     image: ${FRONTEND_IMAGE}
     container_name: frontend
+    pull_policy: always 
     depends_on:
       - backend
     restart: unless-stopped
