--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,9 +57,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
@@ -85,9 +82,17 @@ jobs:
             FRONTEND_IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-frontend:latest
             EOF
             
-            # Docker 이미지 pull 및 재시작
-            docker-compose -f docker-compose.prod.yml pull
+            # 기존 컨테이너 중지 및 제거
             docker-compose -f docker-compose.prod.yml down
+            
+            # Docker 로그인
+            echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+            
+            # 최신 이미지 강제로 pull (캐시 무시)
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-backend:latest
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-frontend:latest
+            
+            # 새로운 컨테이너 시작
             docker-compose -f docker-compose.prod.yml up -d
             
             # 사용하지 않는 이미지 정리
