--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,48 +14,36 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        service: [backend, frontend]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
+      
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # Backend 이미지 빌드 및 푸시
-      - name: Build and push Backend image
-        uses: docker/build-push-action@v4
+      
+      - name: Build and push ${{ matrix.service }} image
+        uses: docker/build-push-action@v5
         with:
-          context: ./backend
+          context: ./${{ matrix.service }}
           push: true
           tags: |
-            ${{ env.BACKEND_IMAGE }}:latest
-            ${{ env.BACKEND_IMAGE }}:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      # Frontend 이미지 빌드 및 푸시
-      - name: Build and push Frontend image
-        uses: docker/build-push-action@v4
-        with:
-          context: ./frontend
-          push: true
-          tags: |
-            ${{ env.FRONTEND_IMAGE }}:latest
-            ${{ env.FRONTEND_IMAGE }}:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            ${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-${{ matrix.service }}:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-${{ matrix.service }}:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-${{ matrix.service }}:latest
+          cache-to: type=inline
 
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
-
     steps:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
@@ -64,13 +52,8 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # 프로젝트 디렉토리로 이동
             cd ~/pharmacy-project
-            
-            # 최신 설정 파일들 가져오기 (docker-compose.yml 등)
             git pull origin main
-            
-            # infra 디렉토리로 이동
             cd infra
             
             # Docker 로그인
@@ -91,25 +74,16 @@ jobs:
             EOF
             
             # 최신 이미지 pull
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-backend:latest
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-frontend:latest
+            docker-compose -f docker-compose.prod.yml pull
             
             # 컨테이너 시작 (강제 재생성)
             docker-compose -f docker-compose.prod.yml up -d --force-recreate --remove-orphans
             
-            # 컨테이너 시작 대기
-            sleep 10
-            
             # 컨테이너 상태 확인
-            echo "=== 컨테이너 상태 ==="
             docker-compose -f docker-compose.prod.yml ps
             
-            # 로그 확인
-            echo "=== Backend 로그 ==="
-            docker-compose -f docker-compose.prod.yml logs --tail=20 backend
-            
-            echo "=== Frontend 로그 ==="
-            docker-compose -f docker-compose.prod.yml logs --tail=20 frontend
+            # 최근 로그 확인
+            docker-compose -f docker-compose.prod.yml logs --tail=20
             
             # 사용하지 않는 이미지 정리
             docker image prune -af
