--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,8 @@ jobs:
             echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
             
             echo "=== 기존 컨테이너 중지 ==="
-            docker-compose -f docker-compose.prod.yml down || true
+            # docker-compose -f docker-compose.prod.yml down || true
+            docker-compose --env-file .env.prod -f docker-compose.prod.yml down || true
             
             echo "=== .env.prod 파일 생성 ==="
             cat > .env.prod << 'EOF'
@@ -78,23 +79,28 @@ jobs:
             cat .env.prod
             
             echo "=== 최신 이미지 pull ==="
-            docker-compose -f docker-compose.prod.yml pull
+            # docker-compose -f docker-compose.prod.yml pull
+            docker-compose --env-file .env.prod -f docker-compose.prod.yml pull
             
             echo "=== 컨테이너 시작 ==="
-            docker-compose -f docker-compose.prod.yml up -d --force-recreate --remove-orphans
-            
+            # docker-compose -f docker-compose.prod.yml up -d --force-recreate --remove-orphans
+            docker-compose --env-file .env.prod -f docker-compose.prod.yml up -d --force-recreate --remove-orphans
+
             echo "=== 컨테이너 시작 대기 (10초) ==="
             sleep 10
             
             echo "=== 컨테이너 상태 확인 ==="
-            docker-compose -f docker-compose.prod.yml ps
+            # docker-compose -f docker-compose.prod.yml ps
+            docker-compose --env-file .env.prod -f docker-compose.prod.yml ps
             
             echo "=== Backend 로그 (최근 30줄) ==="
-            docker-compose -f docker-compose.prod.yml logs --tail=30 backend
-            
+            # docker-compose -f docker-compose.prod.yml logs --tail=30 backend
+            docker-compose --env-file .env.prod -f docker-compose.prod.yml logs --tail=30 backend
+      
             echo "=== Frontend 로그 (최근 30줄) ==="
-            docker-compose -f docker-compose.prod.yml logs --tail=30 frontend
-            
+            # docker-compose -f docker-compose.prod.yml logs --tail=30 frontend
+            docker-compose --env-file .env.prod -f docker-compose.prod.yml logs --tail=30 frontend
+
             echo "=== 사용하지 않는 이미지 정리 ==="
             docker image prune -af
             
