--- a/infra/.env.prod
+++ b/infra/.env.prod
@@ -7,3 +7,5 @@ ALLOWED_ORIGINS=http://52.78.140.244
 DOCKERHUB_USERNAME=uizzuu
 BACKEND_IMAGE=uizzuu/pharmacy-backend:latest
 FRONTEND_IMAGE=uizzuu/pharmacy-frontend:latest
+
+KAKAO_REST_API_KEY=3117fed0f314317d3270cd28f431d4f4
