--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -38,6 +38,8 @@ spring:
 app:
   allowed-origins: http://localhost:3000
 
+KAKAO_REST_API_KEY: 3117fed0f314317d3270cd28f431d4f4
+
 ---
 spring:
   config:
@@ -58,3 +60,5 @@ spring:
 
 app:
   allowed-origins: ${ALLOWED_ORIGINS:http://localhost:3000}
+
+KAKAO_REST_API_KEY: ${KAKAO_REST_API_KEY}
