--- a/frontend/.env
+++ b/frontend/.env
@@ -2,4 +2,4 @@
 VITE_API_URL=http://localhost:8080
 
 # Production (빌드 시 사용)
-VITE_API_URL=http://52.78.140.244:8080
+# VITE_API_URL=http://52.78.140.244:8080
