--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,10 @@ jobs:
             RDS_ENDPOINT=${{ secrets.RDS_ENDPOINT }}
             SPRING_DATASOURCE_USERNAME=${{ secrets.DB_USERNAME }}
             SPRING_DATASOURCE_PASSWORD=${{ secrets.DB_PASSWORD }}
-            ALLOWED_ORIGINS=http://${{ secrets.EC2_HOST }}
+            
+             # 🛑 수정된 부분: CORS 허용 도메인 추가 🛑
+            ALLOWED_ORIGINS=http://localhost:3000,http://${{ secrets.EC2_HOST }},http://${{ secrets.EC2_HOST }}:8080
+            
             DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
             BACKEND_IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-backend:latest
             FRONTEND_IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-frontend:latest
