--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,8 @@ jobs:
             
              # 🛑 수정된 부분: CORS 허용 도메인 추가 🛑
             ALLOWED_ORIGINS=http://localhost:3000,http://${{ secrets.EC2_HOST }},http://${{ secrets.EC2_HOST }}:8080
-            
+            MY_KAKAO_KEY=${{ secrets.KAKAO_REST_API_KEY }} 
+
             DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
             BACKEND_IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-backend:latest
             FRONTEND_IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/pharmacy-frontend:latest
