--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
 app:
   allowed-origins: http://localhost:3000,http://localhost
 
-KAKAO_REST_API_KEY: 3117fed0f314317d3270cd28f431d4f4
+MY_KAKAO_KEY: 3117fed0f314317d3270cd28f431d4f4
 
 ---
 spring:
@@ -62,4 +62,4 @@ spring:
 app:
   allowed-origins: ${ALLOWED_ORIGINS}
 
-KAKAO_REST_API_KEY: ${MY_KAKAO_KEY}
+MY_KAKAO_KEY: ${MY_KAKAO_KEY}
